--- a/openssl_swift_bypass/Base.lproj/Main.storyboard
+++ b/openssl_swift_bypass/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="openssl_swift_bypass" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="YDViewController" customModule="openssl_swift_bypass" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -107,7 +106,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Raj-XF-lzv"/>
                     <connections>
-                        <outlet property="http_test_lbl" destination="hGU-BK-Dfl" id="qfJ-va-oBn"/>
+                        <outlet property="http_test_lbl" destination="hGU-BK-Dfl" id="o2q-C7-a3b"/>
                         <outlet property="https_cert_test_lbl" destination="aTh-XQ-QWx" id="S3y-g9-1XE"/>
                         <outlet property="https_test_lbl" destination="5dr-9x-RlA" id="ldf-bo-1GM"/>
                         <outlet property="openssl_test_btn" destination="B84-Pe-Rgk" id="EoT-i9-bCX"/>
@@ -117,6 +116,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1055.2" y="122.78860569715144"/>
+        </scene>
+        <!--Secret Controller-->
+        <scene sceneID="2Po-K1-6Of">
+            <objects>
+                <viewController id="CRd-A7-n36" customClass="YDSecretController" customModule="openssl_swift_bypass" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="deE-f8-ZtQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="jOs-H3-3my"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sEU-Qr-kDx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SECRET VIEW CONTROLLER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WJi-fd-0DP">
+                                <rect key="frame" x="76" y="323" width="223" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WJi-fd-0DP" firstAttribute="centerY" secondItem="sEU-Qr-kDx" secondAttribute="centerY" id="CgU-ns-gmq"/>
+                            <constraint firstItem="WJi-fd-0DP" firstAttribute="centerX" secondItem="sEU-Qr-kDx" secondAttribute="centerX" id="xiu-Pw-S2m"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mvw-Sf-pa2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1832.8" y="122.78860569715144"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="A78-VE-qzt">
